[package]
name = "blockchain"
version = "0.1.0"
authors = ["muasya <francismuasya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.26"
serde = { version = "1.0.125", features = ["derive"] } 
serde_derive = "1.0.125"
serde_json = "1.0.64"
sha2 = "0.9.3"
